Fix skills on mobile display

--- a/app/assets/styles/modules/_icon.css
+++ b/app/assets/styles/modules/_icon.css
@@ -41,4 +41,8 @@
         color: deepskyblue;
     }
 
+    &-php {
+        color: slateblue;
+    }
+
 }
